bonus/confs/gitlab/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bonus-gitlab-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bonus-gitlab-app
  template:
    metadata:
      labels:
        app: bonus-gitlab-app
    spec:
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: bonus-gitlab-service
spec:
  selector:
    app: bonus-gitlab-app
  ports:
  - port: 80
    targetPort: 8080
