bonus/confs/gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonus-gitlab-ingress
spec:
  rules:
  - host: bonus-gitlab-service.gitlab.svc.cluster.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bonus-gitlab-service
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/gitlab"
        backend:
          service:
            name: bonus-gitlab-service
            port:
              number: 80
